deCOMtaminate nsIWidget::GetChildren.  Bug 243724, r+sr=roc (with sr=blizzard on a previous-but-similar iteration of the patch).