widget/src/xpwidgets/nsBaseWidget.h
@@ -39,7 +39,6 @@
 
 #include "nsRect.h"
 #include "nsIWidget.h"
-#include "nsIEnumerator.h"
 #include "nsIMouseListener.h"
 #include "nsIEventListener.h"
 #include "nsIMenuListener.h"
@@ -47,7 +46,6 @@
 #include "nsIAppShell.h"
 #include "nsString.h"
 #include "nsVoidArray.h"
-#include "nsCOMArray.h"
 #include "nsCOMPtr.h"
 #include "nsGUIEvent.h"
 
@@ -80,7 +78,6 @@ public:
   NS_IMETHOD              Destroy();
   NS_IMETHOD              SetParent(nsIWidget* aNewParent);
   virtual nsIWidget*      GetParent(void);
-  virtual nsIEnumerator*  GetChildren();
   virtual void            AddChild(nsIWidget* aChild);
   virtual void            RemoveChild(nsIWidget* aChild);
 
@@ -175,26 +172,7 @@ protected:
   nsRect*           mOriginalBounds;
   PRInt32           mZIndex;
   nsSizeMode        mSizeMode;
-
-    // keep the list of children
-  nsCOMArray<nsIWidget> mChildren;
     
-  class Enumerator : public nsIBidirectionalEnumerator {
-  public:
-    NS_DECL_ISUPPORTS
-
-    Enumerator(nsBaseWidget & inParent);
-    virtual ~Enumerator();
-
-    NS_DECL_NSIENUMERATOR
-    NS_DECL_NSIBIDIRECTIONALENUMERATOR
-
-  private:
-    PRInt32       mCurrentPosition;
-    nsBaseWidget& mParent;
-  };
-  friend class Enumerator;
-
     // Enumeration of the methods which are accessable on the "main GUI thread"
     // via the CallMethod(...) mechanism...
     // see nsSwitchToUIThread
